--- a/README
+++ b/README
@@ -1,13 +1,13 @@
-#MineProbability
+# MineProbability
 
 **MineProbability** enhances your Minecraft mining experience by adding customizable explosive probabilities and unique mechanics when mining specific ores (like gold, diamond, etc.). With this plugin, players will face a chance for explosive events that add challenge and excitement to mining.
 
 ---
 
-##⚙️ Features
+## ⚙️ Features
 
-- **Customizable Explosion Probability**: Set fixed or random chances for explosions when mining ore blocks.**
-- **Configurable Explosion Effects**: Control explosion power, block destruction, and player damage.**
-- **Permission System**: Manage plugin commands and features with permissions.**
-- **Supports Multiple Configurations**: Fully customizable with options for specific ores and explosion behavior.**
-- **Easy-to-use Commands**: Toggle and configure the explosion mechanics with simple commands.**
+- **Customizable Explosion Probability**: Set fixed or random chances for explosions when mining ore blocks.
+- **Configurable Explosion Effects**: Control explosion power, block destruction, and player damage.
+- **Permission System**: Manage plugin commands and features with permissions.
+- **Supports Multiple Configurations**: Fully customizable with options for specific ores and explosion behavior.
+- **Easy-to-use Commands**: Toggle and configure the explosion mechanics with simple commands.
